fix: changed overflow:scroll to auto as chromium browsers show scrollbars even when content is not overflowing, some minor fixes along with it

--- a/webui-src/app/scss/base/_base.scss
+++ b/webui-src/app/scss/base/_base.scss
@@ -21,7 +21,7 @@ General site-wide rules
   display: flex;
   background-color: $light-color;
   animation: fadein 0.3s;
-  overflow: scroll;
+  overflow: auto;
 }
 
 input[type='text'],
