--- a/webui-src/app/scss/layouts/_widget.scss
+++ b/webui-src/app/scss/layouts/_widget.scss
@@ -6,7 +6,7 @@
   gap: 0.5rem;
   background-color: white;
   border-radius: 6px;
-  overflow: scroll;
+  overflow: auto;
   & .top-heading {
     display: flex;
     justify-content: space-between;
@@ -22,7 +22,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
     &-heading {
       display: flex;
       justify-content: space-between;
@@ -34,7 +34,7 @@
     }
     &-content {
       height: 100%;
-      overflow: scroll;
+      overflow: auto;
     }
     &-box {
       display: flex;
